<resources>
    <string name="app_name">equipoUno</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sodales sem sed nunc aliquet, eu sodales nisl iaculis. Praesent volutpat, dui id bibendum euismod, tortor augue tempus nulla, ac laoreet lectus metus ut tellus. In tempor auctor imperdiet. Praesent nulla odio, malesuada in arcu euismod, imperdiet viverra neque. Vivamus ut mauris et orci luctus elementum. Donec a quam nisi. Cras ornare justo elit, quis pulvinar felis imperdiet eu. Vestibulum consectetur et magna sit amet ornare. Suspendisse nec lectus fringilla, consequat tellus id, malesuada orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus mollis metus eget libero mollis lacinia non sit amet tellus. </string>
    <string name="first_icon">First icon</string>
    <string name="edit_icon">Edit icon</string>
    <string name="delete_icon">Delete icon</string>
    <string name="challenges_title">Challenges</string>
    <string name="add_challenge">Add challenge</string>
    <string name="desea_eliminar_el_siguiente_reto">¿Desea eliminar el siguiente reto?:</string>
    <string name="no">NO</string>
    <string name="si">SI</string>

    <string name="Lcomojugar">How to play?</string>
    <string name="explication">Players form a circle and place the mobile device in the center, then touch the flashing button to rotate the bottle.</string>
    <string name="explication2">The player who points to the bottle must meet the challenge set by the app, otherwise he/she leaves the game.</string>
    <string name="LquienGana">Who wins?</string>
    <string name="respuesta_quien_gana">The last player who does not quit the game wins</string>

    <string name="reglas">Game rules</string>

    <string name="press_me">PRESS ME</string>
    <string name="countdown_number">4</string>
    <string name="close_button">Close</string>
    <string name="Challenge">Challenge</string>

    <string name="title">Pico botella</string>
    <string name="title_lowercase">pico botella</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrarse">Register</string>
</resources>