<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/challengeFragmentBg"
        tools:context=".view.fragments.HomeFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_challenges"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Lcomojugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lcomojugar"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/explication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explication"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Lcomojugar"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/explication2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explication2"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/explication"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/LQuiengana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LquienGana"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/explication2"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/respuestaQuienGana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_quien_gana"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/LQuiengana"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/winner_animation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:id="@+id/center_animation"
            app:layout_constraintTop_toBottomOf="@+id/respuestaQuienGana"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
