<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:elevation="8dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/imgbtnFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/first_icon"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_album"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/orange_700" />

                <ImageButton
                    android:id="@+id/imgbtnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@null"
                    android:contentDescription="@string/edit_icon"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_edit"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/imgbtnDelete"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/green_700" />

                <ImageButton
                    android:id="@+id/imgbtnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/delete_icon"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/red_700" />

                <View
                    android:id="@+id/guideline1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_700"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/imgbtnFirst" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:padding="8dp"
                    tools:text="@string/lorem"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/guideline1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>